--- a/internship_report.tex
+++ b/internship_report.tex
@@ -229,8 +229,8 @@ which is Problem \eqref{stochastic} but with the distribution $Q$ instead of $P$
     \end{enumerate}
     Then there exists a constant $\delta>0$ such that:
     \begin{align*}
-        &\lvert v\left(P\right)-v\left(Q\right)\rvert \leq L\zeta_p\left(P,Q\right) \\
-        & \emptyset \ne X^*\left(Q\right)\subset X^*\left(P\right)+\Psi_P\left(L\zeta_p\left(P,Q\right)\right)\mathbb{B}
+        &\lvert v\left(P\right)-v\left(Q\right)\rvert \leq L\zeta_p\left(P,Q\right). \\
+        & \emptyset \ne X^*\left(Q\right)\subset X^*\left(P\right)+\Psi_P\left(L\zeta_p\left(P,Q\right)\right)\mathbb{B}.
     \end{align*}
     Where $\Psi_p$ is defined in \cite[2.22-2.23]{romisch_stability_2003}. Whenever $Q\in\mathcal{P}\left(\Xi\right)$ with finite $p$-th order absolute moments and $\zeta_p\left(P,Q\right)<\delta$
 \end{theorem}
@@ -290,8 +290,8 @@ This means that there exists a constant $C>0$ such that $\frac{1}{C}F_0\left(x,\
 \begin{corollary}
     Let \Cref{h1} and \Cref{h2} be satisfied, $\Xi$ be bounded, $X^*\left(P\right)$ be nonempty and $\mathcal{U}$ be an open, bounded neighbourhood of $X^*\left(P\right).$ Then there exist constants $L>0$ and $\delta >0$ such that:
     \begin{align*}
-        \lvert v\left(P\right)-v\left(Q\right)\rvert \leq L\zeta_1\left(P,Q\right) \\
-        \emptyset \ne X^*\left(Q\right)\subset X^*\left(P\right)+\Psi_P\left(L\zeta_1\left(P,Q\right)\right)\mathbb{B}
+        \lvert v\left(P\right)-v\left(Q\right)\rvert \leq L\zeta_1\left(P,Q\right). \\
+        \emptyset \ne X^*\left(Q\right)\subset X^*\left(P\right)+\Psi_P\left(L\zeta_1\left(P,Q\right)\right)\mathbb{B}.
     \end{align*}
     whenever $Q\in\mathcal{P}\left(\Xi\right)$ and has a finite first moment and $\zeta_1\left(P,Q\right)<\delta$.
 \end{corollary}
@@ -1071,7 +1071,7 @@ We have presented everything we need to solve this multiproduct assembly problem
     \min\; &c^Tx + \sum_{k=1}^{K} p_k \left[ (l - q)^T z^k - s^T y^k \right] \\
     \text{s.t. } & y^k = x - A^T z^k, \quad k = 1, \ldots, K \\
     & 0 \leq z^k \leq d^k, \quad y^k \geq 0, \quad k = 1, \ldots, K \\
-    & x \geq 0
+    & x \geq 0.
 \end{aligned}
 \end{equation}
 
